<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Guanxy</string>
    <string name="title_section1">Guanxy</string>
    <string name="title_section2">Punti</string>
    <string name="title_section3">Guida</string>
    <string name="action_settings">Settings</string>
    <string name="chiedi_aiuto">Chiedi Aiuto</string>
    <string name="cerca_aiuti">Aiuta gli Altri</string>
    <string name="premi">Premi in palio</string>
    <string name="trofei">Trofei</string>
    <string name="usare_guanxy">Usare Guanxy</string>
    <string name="autori">Autori</string>
    <string name="punti">Punti</string>
    <string name="richiesta">Scrivi la tua richiesta:</string>
    <string name="utente">Utente:</string>
    <string name="punti_points">Punti:</string>
    <string name="notifiche">Notifiche</string>
    <string name="batteria">Risparmio Batteria</string>
    <string name="lingua">Imposta Lingua</string>
    <string name="username">Cambia Username</string>
    <string name="gpsOff">Gps disattivato!</string>
    <string name="impostazioni">Impostazioni</string>
    <string name="gpsOffText1">Ciao</string>
    <string name="gpsOffText2">, Io sono Guanxy!\nNon posso funzionare senza GPS.\nLo attivi per favore?</string>
    <string name="gpsOffTextNoHello">, non posso funzionare senza GPS.\nLo attivi per favore?</string>
    <string name="connectOff1">, Io sono Guanxy!\nNon posso funzionare senza connessione.\nLa attivi per favore?</string>
    <string name="connectOffNoHello">, non posso funzionare senza connessione.\nLa attivi per favore?</string>
    <string name="impostazioniDati">Dati</string>
    <string name="impostazioniWifi">Wifi</string>
    <string name="connessioneOff">Nessuna connessione</string>
    <string name="caricamentoGps">Guanxy sta elaborando...</string>
    <string name="annullaAiuto">Annulla Aiuto</string>
    <string name="segnalaAbuso">Segnala Abuso</string>
    <string name="NewUsername">Inserisci il nome utente:</string>
    <string name="Invia">Invia</string>
    <string name="puntiExtra">Ottieni Punti Extra</string>
    <string name="cambiaUsername">Cambia Username</string>


    <color name="blueChiaro">#3fa9f5</color>
    <color name="biancoAperto">#FFFFFD</color>
    <color name="biancoChiuso">#FFFFFA</color>

    <color name="white">#FFFFFF</color>
    <color name="biancoOminoRichiesta">#e6e6e6</color>
    <color name="blueScuro">#277edf</color>
    <color name="grigioChiaro">#e8e8e8</color>
    <color name="grigioScuro">#bcbcbc</color>
    <color name="rosso">#ff1500</color>
    <string name="title_activity_maps">Map</string>
    <string name="Ok">Ok</string>
    <string name="Cancella">Cancella</string>
    <string name="salva">Salva</string>
    <string name="annullaRichiesta">Cancella Richiesta</string>
    <string name="stoCercando">Sto cercando...</string>
    <string name="cosaFare">Che devo fare?</string>
    <string name="registraNumero">Inserisci il numero di telefono:</string>
    <string name="registrazionePin">A momenti ti arriverà per SMS il PIN, aggiungilo nella casella qui sotto:</string>
    <string name="registrazione_first">L\'app della gentilezza, gratuita e sicura.</string>
    <string name="Gentilezza">Gentilezza</string>
    <string name="Second_fragment">Con Guanxy puoi chiedere aiuto ed aiutare le persone attorno a te.</string>
    <string name="premiRegistrazione">Premi</string>
    <string name="TerzoFragment">Quando aiuti un utente, vinci dei punti. Ogni anno, i 100 utenti che hanno raccolto più punti vincono un premio.</string>
    <string name="Gratuita">Gratuita</string>
    <string name="Quarto_fragment">Guanxy è gratuita.\nE lo sarà sempre.</string>
    <string name="Sicura">Sicura</string>
    <string name="Quinto_fragment">Ad ogni utente corrisponde un numero di cellulare e quindi una persona rintracciabile. Questo espediente, assieme al pulsante antipanico presente nell\'app, garantisce a massima sicurezza.</string>
    <string name="RichiestaPartOne">Conferma che\n</string>
    <string name="RichiestaPartTwo">ti ha aiutato!</string>
    <string name="TempoMancante">Tempo mancante al 30 Aprile:</string>
    <string name="Grazie">Grazie!</string>
    <string name="Richiesta_Completata">ha confermato il tuo aiuto, tra qualche minuto riceverai i punti che hai vinto!</string>


</resources>
