<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/blueChiaro">


    <Button
        android:layout_width="150dp"
        android:layout_height="25dp"
        android:textStyle="bold"
        android:text="@string/usare_guanxy"
        android:textColor="@color/white"
        android:id="@+id/buttonTextUsareGuanxy"
        android:src="@drawable/button_aiuto"
        android:background="@null"
        android:textAllCaps="false"
        android:textSize="22sp"
        style="?android:attr/borderlessButtonStyle"
        android:layout_marginTop="10dp"


        />


    <Button
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:textStyle="bold"
        android:text="@string/premi"
        android:textColor="@color/white"
        android:id="@+id/buttonTextPremi"
        android:src="@drawable/button_aiuto"
        android:background="@null"
        android:textAllCaps="false"
        android:textSize="22sp"
        style="?android:attr/borderlessButtonStyle"
        android:layout_alignTop="@+id/buttonTextUsareGuanxy"
        android:layout_alignParentEnd="true" />


    <ImageButton
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:id="@+id/buttonUsareGuanxy"
        android:src="@drawable/usareguanxy"
        android:scaleType="fitXY"
        android:background="@null"
        android:layout_marginLeft="15dp"
        android:layout_below="@+id/buttonTextPremi" />


    <ImageButton
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:id="@+id/buttonPremi"
        android:src="@drawable/premi"
        android:scaleType="fitXY"
        android:background="@null"
        android:layout_marginStart="165dp"
        android:layout_alignTop="@+id/buttonUsareGuanxy"
        android:layout_alignEnd="@+id/buttonTextPremi"
        android:layout_marginRight="15dp"/>


    <Button
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:text="@string/trofei"
        android:textStyle="bold"
        android:textSize="22dp"
        android:textAllCaps="false"
        android:id="@+id/buttonTextTrofei"
        android:textColor="@color/white"
        android:background="@null"
        android:layout_below="@+id/buttonUsareGuanxy"
        android:layout_alignParentStart="true"
        android:layout_marginTop="33dp"
        style="?android:attr/borderlessButtonStyle"/>


    <ImageButton
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:id="@+id/buttonTrofei"
        android:src="@drawable/trofei"
        android:scaleType="fitXY"
        android:background="@null"
        android:layout_below="@+id/buttonTextTrofei"
        android:layout_alignStart="@+id/buttonUsareGuanxy" />


    <Button
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:text="@string/autori"
        android:id="@+id/buttonTextAutori"
        android:textStyle="bold"
        android:textSize="22dp"
        android:textAllCaps="false"
        android:background="@null"
        android:textColor="@color/white"
        android:layout_alignTop="@+id/buttonTextTrofei"
        android:layout_alignStart="@+id/buttonTextPremi"
        style="?android:attr/borderlessButtonStyle"/>


    <ImageButton
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:id="@+id/buttonAutori"
        android:src="@drawable/autori"
        android:scaleType="fitXY"
        android:background="@null"
        android:layout_below="@+id/buttonTextAutori"
        android:layout_alignStart="@+id/buttonPremi" />



    <Button
        android:text="@string/title_section1"
        android:textColor="#FFFFFF"
        android:textSize="23sp"
        android:textStyle="bold"
        android:layout_height="60dp"
        android:layout_width="100dp"
        android:background="@drawable/button_selector"
        android:id="@+id/guanxy"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/divider1"
        android:layout_alignBottom="@+id/guanxy"
        android:layout_alignTop="@+id/guanxy"
        android:layout_alignEnd="@+id/guanxy"
        android:background="@drawable/divider"/>

    <Button
        android:text="@string/title_section2"
        android:textColor="#FFFFFF"
        android:textSize="23sp"
        android:textStyle="bold"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:background="@drawable/button_selector"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:id="@+id/punti"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/divider1" />

    <Button
        android:text="@string/title_section3"
        android:textColor="#FFFFFF"
        android:textSize="23sp"
        android:textStyle="bold"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:background="@drawable/button_selector"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:id="@+id/guida"
        android:layout_marginBottom="0dp"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/divider2"
        android:layout_alignParentEnd="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/divider2"
        android:background="@drawable/divider"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/punti"
        android:layout_alignTop="@+id/punti" />




</RelativeLayout>