<?xml version="1.0" encoding="utf-8"?>
<!--main.xml-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent" android:background="@color/blueChiaro"
    android:layout_height="fill_parent"
    >


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/blueChiaro">
   <!-- <TextView android:gravity="center_vertical|center_horizontal" android:textSize="16dip"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:background="@drawable/annulla_aiuta_gli_altri"
        android:text="Annulla"

        android:layout_marginBottom="5dip" android:typeface="sans" /> -->

    <LinearLayout android:id="@+id/ll_country"
    android:layout_height="fill_parent" android:layout_width="fill_parent">
    <ScrollView android:id="@+id/ScrollView11"
    android:layout_width="fill_parent" android:layout_height="fill_parent"
    android:fillViewport="true">
    <LinearLayout android:id="@+id/linearLayoutBuses" android:orientation="vertical"
    android:layout_width="fill_parent" android:layout_height="fill_parent"

    android:stretchColumns="0,1" android:background="@color/blueChiaro">
</LinearLayout>
    </ScrollView>

    </LinearLayout>
    </LinearLayout>


    <Button
        android:text="@string/title_section1"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_height="60dp"
        android:layout_width="120dp"
        android:background="@drawable/button_selector"
        android:id="@+id/guanxy"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:textAllCaps="false"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/divider1"
        android:background="@drawable/divider"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/guanxy"
        android:layout_toRightOf="@+id/guanxy"
        android:layout_alignTop="@+id/guanxy" />

    <Button
        android:text="@string/title_section2"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:background="@drawable/button_selector"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:id="@+id/punti"
        android:textAllCaps="false"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/divider1"
        android:layout_toRightOf="@+id/divider1"/>

    <Button
        android:text="@string/title_section3"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:background="@drawable/button_selector"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:textAllCaps="false"
        android:shadowRadius="5"
        android:id="@+id/guida"
        android:layout_marginBottom="0dp"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/divider2"
        android:layout_toRightOf="@+id/divider2"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/divider2"
        android:background="@drawable/divider"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/punti"
        android:layout_toRightOf="@+id/punti"
        android:layout_alignTop="@+id/punti" />

</RelativeLayout>