<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent" android:background="@color/blueChiaro"
    android:layout_height="fill_parent"
    >


<LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:orientation="vertical"
    android:layout_above="@+id/guanxy">
    <LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:orientation="vertical" android:layout_gravity="center" >
        <TextView android:text="Utente 1" android:id="@+id/text1" android:textSize="17dp" android:textColor="@color/white" android:textStyle="bold" android:paddingLeft="25dp" android:paddingTop="3dp" android:background="@drawable/freccia_chiusa"  android:layout_width="fill_parent" android:layout_height="25dp"
            android:clickable="false" />
        <LinearLayout android:id="@+id/panel1"   android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_above="@+id/guanxy">
            <TextView android:layout_margin="2dip" android:textStyle="bold" android:text="Sono stato bocciato all' esame di malvestuto, come posso fare?" android:textSize="17dp" android:id="@+id/stringaUtente1" android:paddingLeft="115dp" android:paddingTop="25dp" android:background="@drawable/sfondo_nuvoletta"  android:layout_width="fill_parent" android:textColor="@color/white"  android:layout_height="200dp" />
            <TextView android:layout_margin="2dip" android:textStyle="bold"  android:textColor="@color/white" android:paddingLeft="105dp" android:textSize="17dp" android:paddingTop="2dp" android:text="Distanza da Te: 200m\nTempo: 4 minuti" android:background="@color/blueChiaro"  android:layout_width="fill_parent" android:layout_height="wrap_content" />


            <RelativeLayout
                android:layout_marginLeft="45dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
             <ImageButton
                 android:id="@+id/bottone_mappa1"
                 android:layout_marginLeft="55dp"
                 android:background="@drawable/bottone_accetta_aiutaglialtri_bozza"
                 android:layout_width="150dp"
                 android:layout_height="50dp"/>
            </RelativeLayout>



        </LinearLayout>
    </LinearLayout>



</LinearLayout>

    <Button
        android:text="@string/title_section1"
        android:textColor="#FFFFFF"
        android:textSize="23sp"
        android:textStyle="bold"
        android:layout_height="60dp"
        android:layout_width="100dp"
        android:background="@drawable/button_selector"
        android:id="@+id/guanxy"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:enabled="false" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/divider1"
        android:layout_alignBottom="@+id/guanxy"
        android:layout_alignTop="@+id/guanxy"
        android:layout_alignEnd="@+id/guanxy"
        android:background="@drawable/divider"/>

    <Button
        android:text="@string/title_section2"
        android:textColor="#FFFFFF"
        android:textSize="23sp"
        android:textStyle="bold"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:background="@drawable/button_selector"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:id="@+id/punti"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/divider1" />

    <Button
        android:text="@string/title_section3"
        android:textColor="#FFFFFF"
        android:textSize="23sp"
        android:textStyle="bold"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:background="@drawable/button_selector"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:id="@+id/guida"
        android:layout_marginBottom="0dp"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/divider2"
        android:layout_alignParentEnd="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/divider2"
        android:background="@drawable/divider"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/punti"
        android:layout_alignTop="@+id/punti" />

    </RelativeLayout>
