<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/blueChiaro">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:showDividers="beginning|end">



        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/imageView"
                android:background="@drawable/icon_notifiche"
                android:layout_alignBottom="@+id/togglebutton"
                android:layout_alignParentStart="true"
                android:layout_marginTop="100dp"
                android:layout_gravity="bottom"
                android:layout_column="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/notifiche"
                android:text="@string/notifiche"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="25dp"
                android:gravity="center|left"
                android:layout_marginStart="20dp"
                android:layout_gravity="bottom|left"
                android:layout_column="1" />

            <ToggleButton
                android:id="@+id/toggleNotifiche"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="On"
                android:textOff="Off"
                android:onClick="onToggleClicked"
                android:layout_column="2"
                android:layout_gravity="bottom" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="20dp">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/imageView2"
                android:background="@drawable/icon_battery"
                android:layout_alignParentStart="true"
                android:layout_gravity="bottom"
                android:layout_column="0"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/batteria"
                android:text="@string/batteria"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="25dp"
                android:gravity="center|left"
                android:layout_marginStart="20dp"
                android:layout_gravity="bottom|left"
                android:layout_column="1" />
            <ToggleButton
                android:id="@+id/toggleBatteria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="On"
                android:textOff="Off"
                android:onClick="onToggleClicked"
                android:layout_column="2"
                android:layout_gravity="bottom" />

            </TableRow>



        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="20dp">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/imageView3"
                android:background="@drawable/icon_username"
                android:layout_alignParentStart="true"
                android:layout_gravity="bottom"
                android:layout_column="0"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:background="@color/blueChiaro"
                android:id="@+id/username"
                android:text="@string/username"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="25dp"
                android:gravity="center|left"
                android:layout_marginStart="20dp"
                android:layout_gravity="bottom|left"
                android:layout_column="1" />


        </TableRow>


    </TableLayout>

    <ListView
        android:id="@android:id/list"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="0dp">
    </ListView>

</RelativeLayout>